--- a/XF.Material/XF.Material.csproj
+++ b/XF.Material/XF.Material.csproj
@@ -123,5 +123,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\raw\" />
+  </ItemGroup>
   
 </Project>
