--- a/XF.Material/XF.Material.csproj
+++ b/XF.Material/XF.Material.csproj
@@ -107,12 +107,16 @@
 
   <ItemGroup>
     <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.1" />
+    <PackageReference Include="SkiaSharp.Views.Forms" Version="2.80.2-preview.19" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.967" />
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Controls\MaterialCircleProgressView.xaml.cs">
+      <DependentUpon>MaterialCircleProgressView.xaml</DependentUpon>
+    </Compile>
     <Compile Update="UI\MaterialDivider.xaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
